# game-lens

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.superset  Makefile  README.md  docker-compose.yaml  pyproject.toml  superset_config.py
airflow/: .env.example  Dockerfile
airflow/dags/: steam_appdetails_daily_update.py  steam_appdetails_full_load.py  steam_appdetails_transform_gold.py  steam_appdetails_transform_silver.py  steam_applist_load.py  test_dag.py
docs/: README.md
docs/adr/: README.md
docs/data-dictionaries/bronze/: steam_appdetails.md  steam_applist.md
docs/data-dictionaries/silver/: core_game_catalog.md
docs/design-docs/: core_game_catalog.md  steam_data_pipeline.md
gamelens/: settings.py
gamelens/clients/: steam_client.py
gamelens/models/: steam.py
gamelens/models/sql/: ch_schema_gold.sql
gamelens/storage/: constants.py
gamelens/transformers/: steam_appdetails.py
gamelens/transformers/gold/: steam_appdetails_gold_loader.py
gamelens/utils/: app_details.py  clickhouse.py  common.py  duckdb.py
tests/: test_steam_client.py
