[project]
name = "game-lens"
version = "0.1.0"
description = "Data platform for unified gaming analytics"
authors = [
    {name = "Kyrylo Kholodenko",email = "kyrylo.kholodenko@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas (>=1.5,<2.2)",
    "great-expectations (>=1.5.7,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "pydantic (>=2.7,<3.0)",
    "pydantic-settings (>=2.0,<3.0)",
    "s3fs (==2025.7.0)",
    "boto3 (==1.39.11)",
    "duckdb (>=1.4.1,<2.0.0)",
    "polars (>=1.35.2,<2.0.0)",
    "pyarrow (>=22.0.0,<23.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.7"
pytest = "^8.4.1"
pre-commit = "^4.2.0"

[tool.ruff]
line-length = 120
target-version = "py312"
lint.select = ["E", "F", "I"]
